REGRESSION(r89004): Video pauses and never resumes playing if scrubbed during playback. https://bugs.webkit.org/show_bug.cgi?id=64314

Reviewed by Sam Weinig.

No new tests because it's hard to make a non-flaky test for this behavior.

* html/RangeInputType.cpp:
(WebCore::RangeInputType::handleMouseDownEvent):
Don't call SliderThumbElement::dragFrom() for events on the thumb.
* html/shadow/SliderThumbElement.cpp:
(WebCore::SliderThumbElement::defaultEventHandler):
Do not call setDefaultHandled() for mouse events in order to
propagate them to ancestor elements.

Canonical link: https://commits.webkit.org/80575@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91333 268f45cc-cd09-0410-ab3c-d52691b4dbfc